adapter/internal/operator/gateway-api/translator/testdata/out/xds-ir/oidc.listeners.yaml
- address:
    socketAddress:
      address: 0.0.0.0
      portValue: 10080
  defaultFilterChain:
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        commonHttpProtocolOptions:
          headersWithUnderscoresAction: REJECT_REQUEST
        http2ProtocolOptions:
          initialConnectionWindowSize: 1048576
          initialStreamWindowSize: 65536
          maxConcurrentStreams: 100
        httpFilters:
        - disabled: true
          name: envoy.filters.http.oauth2_first-route
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
            config:
              authScopes:
              - openid
              - email
              - profile
              authType: BASIC_AUTH
              authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
              credentials:
                clientId: client.oauth.foo.com
                cookieNames:
                  bearerToken: BearerToken-5F93C2E4
                  idToken: IdToken-5F93C2E4
                  oauthExpires: OauthExpires-5F93C2E4
                  oauthHmac: OauthHMAC-5F93C2E4
                  refreshToken: RefreshToken-5F93C2E4
                hmacSecret:
                  name: first-route/oauth2/hmac_secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
                tokenSecret:
                  name: first-route/oauth2/client_secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
              forwardBearerToken: true
              redirectPathMatcher:
                path:
                  exact: /foo/oauth2/callback
              redirectUri: https://www.example.com/foo/oauth2/callback
              signoutPath:
                path:
                  exact: /foo/logout
              tokenEndpoint:
                cluster: oauth_foo_com_443
                timeout: 10s
                uri: https://oauth.foo.com/token
        - disabled: true
          name: envoy.filters.http.oauth2_second-route
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
            config:
              authScopes:
              - openid
              - email
              - profile
              authType: BASIC_AUTH
              authorizationEndpoint: https://oauth.bar.com/oauth2/v2/auth
              credentials:
                clientId: client.oauth.bar.com
                cookieNames:
                  bearerToken: BearerToken-5f93c2e4
                  idToken: IdToken-5f93c2e4
                  oauthExpires: OauthExpires-5f93c2e4
                  oauthHmac: OauthHMAC-5f93c2e4
                  refreshToken: RefreshToken-5f93c2e4
                hmacSecret:
                  name: second-route/oauth2/hmac_secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
                tokenSecret:
                  name: second-route/oauth2/client_secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
              forwardBearerToken: true
              redirectPathMatcher:
                path:
                  exact: /bar/oauth2/callback
              redirectUri: https://www.example.com/bar/oauth2/callback
              signoutPath:
                path:
                  exact: /bar/logout
              tokenEndpoint:
                cluster: oauth_bar_com_443
                timeout: 10s
                uri: https://oauth.bar.com/token
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            suppressEnvoyHeaders: true
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: first-listener
        serverHeaderTransformation: PASS_THROUGH
        statPrefix: http
        useRemoteAddress: true
  drainType: MODIFY_ONLY
  name: first-listener
  perConnectionBufferLimitBytes: 32768
